clusters/default/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
      services:
        - name: vaultwarden
          port: 80
